# alchemy

./: .editorconfig  .gitignore  .gitmodules  README.md  alchemy.py  chemical_space.old.py  chemical_space.py  chemical_space_2.py  compare_atom_counds.py  config.py  draw_graph.py  main.py  pyproject.toml  reaction_network.graphml  reaction_space.py  requirements.txt  test_bits.py  test_chemicalspace.py  test_reactants.csv  test_reactions.py  utilities.py
2/: molecules.csv
2/molecule_xyz/: mol_0.xyz  mol_1.xyz  mol_10.xyz  mol_11.xyz  mol_12.xyz  mol_13.xyz  mol_14.xyz  mol_15.xyz  mol_16.xyz  mol_17.xyz  mol_18.xyz  mol_19.xyz  mol_2.xyz  mol_20.xyz  mol_21.xyz  mol_22.xyz  mol_23.xyz  mol_24.xyz  mol_25.xyz  mol_26.xyz  mol_27.xyz  mol_28.xyz  mol_29.xyz  mol_3.xyz  mol_30.xyz  mol_31.xyz  mol_32.xyz  mol_33.xyz  mol_34.xyz  mol_35.xyz  mol_36.xyz  mol_37.xyz  mol_38.xyz  mol_39.xyz  mol_4.xyz  mol_40.xyz  mol_41.xyz  mol_5.xyz  mol_6.xyz  mol_7.xyz  (+2 more)
3/: molecules.csv
3/molecule_xyz/: mol_0.xyz  mol_1.xyz  mol_10.xyz  mol_100.xyz  mol_101.xyz  mol_102.xyz  mol_103.xyz  mol_104.xyz  mol_105.xyz  mol_106.xyz  mol_107.xyz  mol_108.xyz  mol_109.xyz  mol_11.xyz  mol_110.xyz  mol_111.xyz  mol_112.xyz  mol_113.xyz  mol_114.xyz  mol_115.xyz  mol_116.xyz  mol_117.xyz  mol_118.xyz  (+205 more)
chemical_space/: chemical_space.py  cleave.py  cli.py  config.py  workers.py
chemical_space_results/: molecules.csv
examples/: molecules.csv  molecules.md  reactions.csv  reactions.md
flask_app/: app.py
reaction_space/: cli.py  reaction_space.py  structure.py  utils.py  workers.py
(+5 files in other folders)
