[project]
name = "crn-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "flask>=3.1.1",
    "graphviz>=0.20.3",
    "lmdb>=1.6.2",
    "matplotlib>=3.10.0",
    "networkx",
    "numba>=0.61.0",
    "numpy",
    "pandas",
    "pygraphviz>=1.14",
    "rdkit>=2024.9.4",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]
