[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alchemy"
version = "0.1.0"
description = "A tool for exploring chemical space and generating chemical reaction networks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "graphviz>=0.21",
    "lmdb>=1.7.3",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "rdkit>=2025.3.5",
    "rxnmapper[rdkit]>=0.4.2",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "flask>=3.1.2",
]

[project.scripts]
alchemy = "alchemy:main"

[tool.setuptools]
py-modules = ["alchemy"]

[tool.setuptools.packages.find]
where = ["."]

